@@ -495,6 +495,7 @@ extern int  digipeater_prepoll(struct aprxpolls *app);
 extern int  digipeater_postpoll(struct aprxpolls *app);
 extern void digipeater_config(struct configfile *cf);
 extern void digipeater_receive(struct digipeater_source *src, struct pbuf_t *pb);
+extern int  digipeater_receive_filter(struct digipeater_source *src, struct pbuf_t *pb);
 extern dupecheck_t *digipeater_find_dupecheck(const struct aprx_interface *aif);
 
 /* interface.c */
