@@ -947,6 +947,22 @@ static int decrement_ssid(uint8_t *ax25addr)
 }
 
 
+/* 0 == accept, otherwise reject */
+int digipeater_receive_filter(struct digipeater_source *src, struct pbuf_t *pb)
+{
+	if (src->src_filters != NULL) {
+	  int rc = filter_process(pb, src->src_filters, src->parent->historydb);
+	  if (rc != 1) {
+	    if (debug>1)
+	      printf("Source filtering rejected the packet from %s.\n", src->src_if->callsign);
+	    return 1;
+	  }
+	  if (debug>1)
+	    printf("Source filtering accepted the packet from %s.\n", src->src_if->callsign);
+	}
+	return 0;
+}
+
 static void digipeater_receive_backend(struct digipeater_source *src, struct pbuf_t *pb)
 {
 	int len, viaindex;
@@ -954,17 +970,6 @@ static void digipeater_receive_backend(struct digipeater_source *src, struct pbu
 	struct digistate viastate;
 	struct digipeater *digi = src->parent;
 	char viafield[14];
-
-	if (src->src_filters != NULL) {
-	  int rc = filter_process(pb, src->src_filters, digi->historydb);
-	  if (rc != 1) {
-	    if (debug>1)
-	      printf("Source filtering rejected the packet from %s.\n", src->src_if->callsign);
-	    return;
-	  }
-	  if (debug>1)
-	    printf("Source filtering accepted the packet from %s.\n", src->src_if->callsign);
-	}
 
 	memset(&state,    0, sizeof(state));
 	memset(&viastate, 0, sizeof(viastate));
